--- a/Interpretation.ipynb
+++ b/Interpretation.ipynb
@@ -4,13 +4,68 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-8cdc13d3a506>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mpandas\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mmatplotlib\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpyplot\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mplt\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mseaborn\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0msns\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mscipy\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstats\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mstats\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mnumpy\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import scipy.stats as stats\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading https://files.pythonhosted.org/packages/d2/5c/8866094446c6b09360103677fc099fe1ea9eb3d72fad7d24b9b7b61bf40f/matplotlib-3.2.1-cp38-cp38-win32.whl (9.0MB)\n",
+      "Collecting pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 (from matplotlib)\n",
+      "  Using cached https://files.pythonhosted.org/packages/8a/bb/488841f56197b13700afd5658fc279a2025a39e22449b7cf29864669b15d/pyparsing-2.4.7-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: numpy>=1.11 in c:\\users\\pg25\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (from matplotlib) (1.18.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\pg25\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (from matplotlib) (2.8.1)\n",
+      "Collecting kiwisolver>=1.0.1 (from matplotlib)\n",
+      "  Downloading https://files.pythonhosted.org/packages/83/c0/b370ca17fd314f188d98194c0217054416401418df4928ca844dd5b4bb4e/kiwisolver-1.2.0-cp38-none-win32.whl (43kB)\n",
+      "Collecting cycler>=0.10 (from matplotlib)\n",
+      "  Using cached https://files.pythonhosted.org/packages/f7/d2/e07d3ebb2bd7af696440ce7e754c59dd546ffe1bbe732c8ab68b9c834e61/cycler-0.10.0-py2.py3-none-any.whl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 19.2.3, however version 20.0.2 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: six>=1.5 in c:\\users\\pg25\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (from python-dateutil>=2.1->matplotlib) (1.14.0)\n",
+      "Installing collected packages: pyparsing, kiwisolver, cycler, matplotlib\n",
+      "Successfully installed cycler-0.10.0 kiwisolver-1.2.0 matplotlib-3.2.1 pyparsing-2.4.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install matplotlib"
    ]
   },
   {
@@ -28,19 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-8.20336474360901, -7.7436120661875, -7.283859388765991], [-12.547648794420633, -12.110815487218751, -11.67398218001687], [-12.658223831909208, -12.251818561281251, -11.845413290653294], [-4.8002575535153476, -4.385107843375, -3.9699581332346514], [-3.144998261592767, -2.7148774560625, -2.284756650532233], [12.034194887865134, 12.516260041750002, 12.99832519563487], [2.1108086961556314, 2.55148585125, 2.9921630063443683]]\n",
-      "[[0.18051080225410715, 0.19085197276218124, 0.20119314327025534], [0.20996193594594437, 0.21962488694217408, 0.2292878379384038], [0.10380124792451445, 0.11528767540823516, 0.12677410289195587], [-0.018800757703725364, -0.007520849003556087, 0.0037590596966131876], [-0.01177644653392379, 0.0005373287167846855, 0.012851103967493161], [-0.05349898027251112, -0.04258407205820375, -0.03166916384389638], [-0.020079241109854852, -0.008370153122002661, 0.0033389348658495275]]\n",
-      "[[-7.904094021297026, -7.47510966253125, -7.046125303765474], [-12.353101101696149, -11.95127690821875, -11.549452714741351], [-12.736438959349123, -12.370253833749999, -12.004068708150875], [-5.042286138827686, -4.55881266521875, -4.075339191609814], [-3.200641804459589, -2.7506243365625, -2.300606868665411], [11.777864563109658, 12.26899765590625, 12.760130748702844], [2.4029128880546926, 2.88054573690625, 3.3581785857578073]]\n",
-      "[[0.02226006944950714, 0.034473204662374315, 0.04668633987524149], [0.04595090733530799, 0.05651774311226696, 0.06708457888922593], [0.3504905235139621, 0.35811185946124874, 0.3657331954085354], [-0.007321532868272274, 0.0031550366437035956, 0.013631606155679465], [-0.014458543350479337, -0.0024317974256900503, 0.009594948499099237], [-0.07307750235846543, -0.062063532215753656, -0.05104956207304188], [0.23880074228764822, 0.2516341476193845, 0.26446755295112084]]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "<Figure size 1440x1440 with 4 Axes>",
@@ -73,7 +118,6 @@
     "        intervallist.append([lowbound,mu,upbound])\n",
     "\n",
     "\n",
-    "    print(intervallist)\n",
     "    # set figure size.\n",
     "    plt.subplot(2,2,i)\n",
     "    # plot box plots of each sample mean.\n",
@@ -83,6 +127,7 @@
     "    plt.xticks(range(1,8), labels=df.columns)\n",
     "\n",
     "# show plot.\n",
+    "plt.savefig(\"plots/screening_plots.png\")\n",
     "plt.show()"
    ]
   }
@@ -103,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
