added naming to comparative results

--- a/Welch conf intervals.ipynb
+++ b/Welch conf intervals.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "simulation_folder_name = \"(3,3)  comparative upgrade\"\n",
+    "simulation_folder_name = \"(3,3) comparative new\"\n",
     "baseline_folder_name = \"baseline 150\"\n",
     "baseline = pd.read_excel(\"output/\"+baseline_folder_name+\"/Current_System.xlsx\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    from scipy import stats\n",
     "    import math\n",
     "    \n",
-    "    results = pd.DataFrame({'lower_bound':[], 'upper_bound':[]})\n",
+    "    results = pd.DataFrame({'run':[],'lower_bound':[], 'upper_bound':[]})\n",
     "    ## Welch-Satterthwaite Degrees of Freedom ##\n",
     "    dof = (x.var()/x.size + y.var()/y.size)**2 / ((x.var()/x.size)**2 / (x.size-1) + (y.var()/y.size)**2 / (y.size-1))\n",
     "    lower=x.mean()-y.mean()-stats.t.ppf(1-alpha/2, dof)*math.sqrt((x.var()/x.size) +(y.var()/y.size))\n",
@@ -53,6 +53,7 @@
     "    if add_csv:\n",
     "        results['lower_bound'] = [lower]\n",
     "        results['upper_bound'] = [upper]\n",
+    "        results['name'] = [simulation_folder_name]\n",
     "        results.to_csv(\"results comparative.csv\", mode='a', header=False)"
    ]
   },
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
