Common_Random_Numbers => line 379 adjusted

--- a/Welch conf intervals.ipynb
+++ b/Welch conf intervals.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "simulation_folder_name = \"(3,3) comparative new\"\n",
+    "#(5,2)  comparative upgrade\n",
+    "#(5,2) comparative new\n",
+    "simulation_folder_name = \"(5,2) comparative new\"\n",
     "baseline_folder_name = \"baseline 150\"\n",
     "baseline = pd.read_excel(\"output/\"+baseline_folder_name+\"/Current_System.xlsx\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")"
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +68,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "welch_conf(baseline['objective function'], simulation['objective function'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>run</th>\n",
+       "      <th>lower_bound</th>\n",
+       "      <th>upper_bound</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.568069</td>\n",
+       "      <td>31.408520</td>\n",
+       "      <td>(5,2)  comparative upgrade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.394125</td>\n",
+       "      <td>31.233976</td>\n",
+       "      <td>(5,2) comparative new</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  run  lower_bound  upper_bound                        name\n",
+       "0           0  NaN    30.568069    31.408520  (5,2)  comparative upgrade\n",
+       "1           0  NaN    30.394125    31.233976       (5,2) comparative new"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"results comparative.csv\")\n",
+    "df.head()"
    ]
   }
  ],
@@ -90,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
