Welch conf update

--- a/Welch conf intervals.ipynb
+++ b/Welch conf intervals.ipynb
@@ -9,18 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "#(5,2)  comparative upgrade\n",
-    "#(5,2) comparative new\n",
-    "simulation_folder_name = \"(5,2) comparative new\"\n",
-    "baseline_folder_name = \"baseline 150\"\n",
-    "baseline = pd.read_excel(\"output/\"+baseline_folder_name+\"/Current_System.xlsx\")\n",
+    "simulation_folder_name = \"(5,2)comparative new\" #dit moet je aanpassen\n",
+    "baseline_folder_name = \"Baseline\"\n",
+    "baseline = pd.read_csv(\"output/\"+baseline_folder_name+\"/performance.csv\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")"
    ]
   },
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +39,7 @@
     "    from scipy import stats\n",
     "    import math\n",
     "    \n",
-    "    results = pd.DataFrame({'run':[],'lower_bound':[], 'upper_bound':[]})\n",
+    "    results = pd.DataFrame({'lower_bound':[], 'upper_bound':[]})\n",
     "    ## Welch-Satterthwaite Degrees of Freedom ##\n",
     "    dof = (x.var()/x.size + y.var()/y.size)**2 / ((x.var()/x.size)**2 / (x.size-1) + (y.var()/y.size)**2 / (y.size-1))\n",
     "    lower=x.mean()-y.mean()-stats.t.ppf(1-alpha/2, dof)*math.sqrt((x.var()/x.size) +(y.var()/y.size))\n",
@@ -68,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +100,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>run</th>\n",
        "      <th>lower_bound</th>\n",
        "      <th>upper_bound</th>\n",
        "      <th>name</th>\n",
@@ -112,30 +109,28 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.568069</td>\n",
-       "      <td>31.408520</td>\n",
-       "      <td>(5,2)  comparative upgrade</td>\n",
+       "      <td>30.645201</td>\n",
+       "      <td>32.593633</td>\n",
+       "      <td>(5,2)comparative upgrade</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.394125</td>\n",
-       "      <td>31.233976</td>\n",
-       "      <td>(5,2) comparative new</td>\n",
+       "      <td>30.482275</td>\n",
+       "      <td>32.430650</td>\n",
+       "      <td>(5,2)comparative new</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  run  lower_bound  upper_bound                        name\n",
-       "0           0  NaN    30.568069    31.408520  (5,2)  comparative upgrade\n",
-       "1           0  NaN    30.394125    31.233976       (5,2) comparative new"
+       "   Unnamed: 0  lower_bound  upper_bound                      name\n",
+       "0           0    30.645201    32.593633  (5,2)comparative upgrade\n",
+       "1           0    30.482275    32.430650      (5,2)comparative new"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
