--- a/Welch conf intervals.ipynb
+++ b/Welch conf intervals.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "simulation_folder_name = \"(5,2)comparative new\" #dit moet je aanpassen\n",
+    "simulation_folder_name = \"(4,3)comparative new\" #dit moet je aanpassen\n",
     "baseline_folder_name = \"Baseline\"\n",
     "baseline = pd.read_csv(\"output/\"+baseline_folder_name+\"/performance.csv\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")"
