--- a/Welch conf intervals.ipynb
+++ b/Welch conf intervals.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "simulation_folder_name = \"(4,3)comparative new\" #dit moet je aanpassen\n",
+    "simulation_folder_name = \"(5,2)comparative new\" #dit moet je aanpassen\n",
     "baseline_folder_name = \"Baseline\"\n",
     "baseline = pd.read_csv(\"output/\"+baseline_folder_name+\"/performance.csv\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,25 +101,36 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>lower_bound</th>\n",
-       "      <th>upper_bound</th>\n",
-       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>0,30.838438181708483,32.476083114530034,\"(3,3)Comparative new\"</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>30.645201</td>\n",
-       "      <td>32.593633</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
+       "      <th>30.985776</th>\n",
+       "      <th>32.623610</th>\n",
+       "      <td>(3,3)Comparative upgrade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30.274182</th>\n",
+       "      <th>32.222364</th>\n",
+       "      <td>(4,3)comparative new</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30.393021</th>\n",
+       "      <th>32.341141</th>\n",
+       "      <td>(4,3)comparative Upgrade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30.645201</th>\n",
+       "      <th>32.593633</th>\n",
        "      <td>(5,2)comparative upgrade</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>30.482275</td>\n",
-       "      <td>32.430650</td>\n",
+       "      <th>30.482275</th>\n",
+       "      <th>32.430650</th>\n",
        "      <td>(5,2)comparative new</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -127,12 +138,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  lower_bound  upper_bound                      name\n",
-       "0           0    30.645201    32.593633  (5,2)comparative upgrade\n",
-       "1           0    30.482275    32.430650      (5,2)comparative new"
+       "                      0,30.838438181708483,32.476083114530034,\"(3,3)Comparative new\"\n",
+       "0 30.985776 32.623610                           (3,3)Comparative upgrade            \n",
+       "  30.274182 32.222364                               (4,3)comparative new            \n",
+       "  30.393021 32.341141                           (4,3)comparative Upgrade            \n",
+       "  30.645201 32.593633                           (5,2)comparative upgrade            \n",
+       "  30.482275 32.430650                               (5,2)comparative new            "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
