--- a/comparative analysis.ipynb
+++ b/comparative analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "simulation_folder_name = \"(3,3)Comparative upgrade\" #dit moet je aanpassen\n",
+    "simulation_folder_name = \"(4,3)Comparative upgrade\" #dit moet je aanpassen\n",
     "baseline_folder_name = \"Baseline\"\n",
     "baseline = pd.read_csv(\"output/\"+baseline_folder_name+\"/performance.csv\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
