--- a/comparative analysis.ipynb
+++ b/comparative analysis.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "simulation_folder_name = \"(4,3)Comparative upgrade\" #dit moet je aanpassen\n",
+    "simulation_folder_name = \"(5,2)Comparative new\" #dit moet je aanpassen\n",
     "baseline_folder_name = \"Baseline\"\n",
     "baseline = pd.read_csv(\"output/\"+baseline_folder_name+\"/performance.csv\")\n",
     "simulation = pd.read_csv(\"output/\"+simulation_folder_name+\"/performance.csv\")\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
