finished pairwise comp and did calculations for all the systems except baseline

--- a/pairwise comp.ipynb
+++ b/pairwise comp.ipynb
@@ -4,15 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file aims to construct a pairwise paired-t and welch table for comparison of systems of a simulation problem\n",
-    "\n",
-    "\n",
-    "\n"
+    "This file aims to construct a pairwise paired-t and welch table for comparison of systems of a simulation problem\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -20,6 +17,7 @@
    },
    "outputs": [],
    "source": [
+    "#Just imports\n",
     "\n",
     "from scipy import stats\n",
     "import pandas as pd\n",
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -37,8 +35,12 @@
    },
    "outputs": [],
    "source": [
-    "def confidence_intervals(x,y,name, alpha = 0.0076923):\n",
-    "    \n",
+    "def confidence_intervals(x,y, alpha = 0.0076923):\n",
+    "    \"\"\"In this function we compute both the Welch and Paired T confidence intervals of significant differences of means\n",
+    "    of the supplied x and Y Series. Do note that we see x as the baseline and y as the new system, as the calculation\n",
+    "    below goes with x.mean - y.mean.\n",
+    "    The function returns an array of length two with as first entry the confidence interval according to welch and as \n",
+    "    the second entry the confidence interval according to the paired-t test\"\"\"\n",
     "\n",
     "    #WELCH\n",
     "    ## Welch-Satterthwaite Degrees of Freedom ##\n",
@@ -46,7 +48,7 @@
     "    lower_welch =x.mean()-y.mean()-stats.t.ppf(1-alpha/2, dof)*math.sqrt((x.var()/x.size) +(y.var()/y.size))\n",
     "    upper_welch =x.mean()-y.mean()+stats.t.ppf(1-alpha/2, dof)*math.sqrt((x.var()/x.size) +(y.var()/y.size))\n",
     "\n",
-    "    results_welch = np.array(lower_welch, upper_welch)\n",
+    "    results_welch = [lower_welch, upper_welch]\n",
     "\n",
     "    #PAIRED - T\n",
     "    paired_t_data = x - y #simulation - baseline\n",
@@ -55,7 +57,7 @@
     "    lower_paired_t = barbar - half_width\n",
     "    upper_paired_t = barbar + half_width\n",
     "\n",
-    "    results_paired_t = np.array(lower_paired_t, upper_paired_t)\n",
+    "    results_paired_t = [lower_paired_t, upper_paired_t]\n",
     "\n",
     "    #return the two results arrays\n",
     "    return [results_welch, results_paired_t]\n",
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -73,6 +75,7 @@
    },
    "outputs": [],
    "source": [
+    "#We read in all the systems to investigate in order to quickly access the folders relating to them in the next step\n",
     "systems = [\"(3,2)Comparative new\", \"(3,2)Comparative upgrade\", \"(3,3)Comparative new\", \"(3,3)Comparative upgrade\",\n",
     "               \"(4,2)Comparative new\",\"(4,2)Comparative upgrade\",\"(4,3)Comparative new\",\"(4,3)Comparative upgrade\",\n",
     "               \"(5,2)Comparative new\",\"(5,2)Comparative upgrade\",\"(5,3)Comparative new\",\"(5,3)Comparative upgrade\"]\n"
@@ -80,59 +83,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-9-7aa318e524de>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     15\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     16\u001B[0m         \u001B[0mresults_welch\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mresults\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mastype\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfloat\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 17\u001B[1;33m         \u001B[0mpairwise_welch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mat\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mx_name\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_name\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mresults_welch\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     18\u001B[0m         \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpairwise_welch\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     19\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-9-7aa318e524de>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     15\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     16\u001B[0m         \u001B[0mresults_welch\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mresults\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mastype\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfloat\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 17\u001B[1;33m         \u001B[0mpairwise_welch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mat\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mx_name\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_name\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mresults_welch\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     18\u001B[0m         \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpairwise_welch\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     19\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_37_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_37_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_37_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_37_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_37_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_37_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_37_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_37_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_37_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_37_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mC:\\Program Files (x86)\\PyCharm 2019.3.4\\plugins\\python\\helpers\\pydev\\pydevd.py\u001B[0m in \u001B[0;36mdo_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1101\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1102\u001B[0m         \u001B[1;32mwith\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_threads_suspended_single_notification\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnotify_thread_suspended\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mthread_id\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mstop_reason\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1103\u001B[1;33m             \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_do_wait_suspend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mthread\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mframe\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mevent\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0marg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msuspend_type\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfrom_this_thread\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   1104\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1105\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0m_do_wait_suspend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mthread\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mframe\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mevent\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0marg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msuspend_type\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfrom_this_thread\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32mC:\\Program Files (x86)\\PyCharm 2019.3.4\\plugins\\python\\helpers\\pydev\\pydevd.py\u001B[0m in \u001B[0;36m_do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1116\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1117\u001B[0m                 \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mprocess_internal_commands\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1118\u001B[1;33m                 \u001B[0mtime\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msleep\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0.01\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   1119\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1120\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcancel_async_evaluation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mget_current_thread_id\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mthread\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mid\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mframe\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#We first construct two symetrical empty dataframes with the systems as columns and rows\n",
     "pairwise_welch = pd.DataFrame(columns = systems, index= systems)\n",
-    "pairwise_welch = pairwise_welch.fillna(0)\n",
-    "pairwise_paired_t = pd.DataFrame(columns = systems)\n",
+    "pairwise_paired_t = pd.DataFrame(columns = systems, index = systems)\n",
+    "\n",
+    "#We loop through all the systems to select a system to compare with the others\n",
     "for x_name in systems:\n",
+    "    #make a copy of the systems in order to be able to remove the current system(x_name) from the system list \n",
     "    comp_systems = systems.copy()\n",
     "    comp_systems.remove(x_name)\n",
+    "    #read in our current system (x) and select the relevant performance measure making it a series object\n",
     "    x = pd.read_csv(\"output/\"+x_name+\"/performance.csv\")\n",
     "    x = x['objective function']\n",
+    "    \n",
+    "    #loop through the systems - x list to compare x with all the other systems(comp_systems)\n",
     "    for y_name in comp_systems:\n",
+    "        #read in the y data and select the relevant performance measure\n",
     "        y = pd.read_csv(\"output/\"+y_name+\"/performance.csv\")\n",
     "        y = y[\"objective function\"]\n",
-    "        name = x_name+\" vs \"+y_name\n",
-    "        results = confidence_intervals(x,y, name)\n",
+    "        #apply the confidence intervals function, explained above\n",
+    "        results = confidence_intervals(x,y)\n",
     "\n",
-    "        results_welch = str(results[0])\n",
-    "        pairwise_welch.at[x_name, y_name] = results_welch\n",
-    "        print(pairwise_welch)"
+    "        #at row = baseline system (x) and column = new system (y) we insert the intervals according to both methods\n",
+    "        pairwise_welch.at[x_name, y_name] = results[0]\n",
+    "        pairwise_paired_t.at[x_name, y_name] = results[1]\n",
+    "\n",
+    "#to aid in readability, we delete the lower half of our symmetrical dataframe and replace it with NaN as these values\n",
+    "# are redundant\n",
+    "pairwise_welch.values[np.tril_indices_from(pairwise_welch, 0)] = np.nan\n",
+    "pairwise_paired_t.values[np.tril_indices_from(pairwise_paired_t, 0)] = np.nan\n",
+    "\n",
+    "#export to csv files in the comparative folder\n",
+    "pairwise_welch.to_csv(\"comparative/pairwise welch.csv\")\n",
+    "pairwise_paired_t.to_csv(\"comparative/pairwise paired-t.csv\")\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -140,18 +133,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [
-     "\n",
-     "\n"
-    ],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
